[version "0.1.14"]
date = Wed Oct  5 08:02:56 PM PDT 2022
done = Fix .bpan/config symlink

[version "0.1.13"]
date = Wed Oct  5 08:16:19 AM PDT 2022
done = Support comment lines anywhere in spec

[version "0.1.12"]
date = Fri Sep 30 01:19:06 PM PDT 2022
done = Change 'update.template' to 'update.file' in config

[version "0.1.11"]
date = Fri Sep 30 08:17:03 AM PDT 2022
done = Support commenting out spec lines with '# '
done = Support '*' indicator for hidden option

[version "0.1.10"]
date = Wed Sep 28 09:12:18 AM PDT 2022
done = Make sure value options default being bound

[version "0.1.9"]
date = Sat Sep 24 11:20:53 AM EDT 2022
done = Update BPAN files
done = Support long name with dashes --foo-bar-baz

[version "0.1.8"]
date = Fri Sep 23 01:59:20 PM EDT 2022
done = Update to new config file schema

[version "0.1.7"]
date = Thu Sep 22 09:05:06 AM EDT 2022
done = Dual options default to '', not false
done = Update BPAN assets

[version "0.1.6"]
date = Thu Sep 15 03:07:46 PM EDT 2022
done = Remove all external deps (is-func)

[version "0.1.5"]
date = Tue Sep 13 04:33:03 PM EDT 2022
done = Fix bug in help output when parsing bad options

[version "0.1.4"]
date = Sun Sep 11 01:27:32 PM EDT 2022
done = Change test-more to test-tap

[version "0.1.3"]
date = Thu Sep  8 01:07:59 PM EDT 2022
done = Implement and document remaining functionality

[version "0.1.2"]
date = Mon Sep  5 07:56:27 AM PDT 2022
done = Finish implementing basic functionality and tests

[version "0.1.1"]
date = Tue 30 Aug 2022 07:30:57 AM PDT
done = Preserve blank lines in options usage output

[version "0.1.0"]
date = Tue 16 Aug 2022 09:22:29 AM PDT
done = Initial release